# gotts-oracle

./: .gitignore  Cargo.toml  README.md
alphavantage/: Cargo.toml
alphavantage/src/: client.rs  deserialize.rs  exchange_rate.rs  lib.rs  time_series.rs
api/: Cargo.toml
api/src/: client.rs  foreign.rs  foreign_rpc.rs  handlers.rs  lib.rs  rest.rs  router.rs  web.rs
api/src/handlers/: server_api.rs  version_api.rs
config/: Cargo.toml
config/src/: comments.rs  config.rs  lib.rs  types.rs
liboracle/: Cargo.toml
liboracle/src/: error.rs  lib.rs  lmdb.rs  oracle_ser.rs  oracle_store.rs  types.rs
src/: gotts_oracle.yml  main.rs
util/: Cargo.toml
util/src/: lib.rs  logger.rs  types.rs
