[package]
name = "gotts_oracle"
version = "0.1.0"
description = "Gotts Oracles with some data vendors API clients such as Alpha Vantage"
license = "Apache License v2.0"
authors = ["Terry Zhao <terryzhao1981@gmail.com>"]
keywords = ["gotts", "oracle", "finance", "stocks", "alphavantage"]
edition = "2018"

[dependencies]
gotts_oracle_alphavantage = { path = "./alphavantage", version = "0.1.0" }
gotts_oracle_api          = { path = "./api", version = "0.1.0" }