[package]
name = "gotts_oracle_alphavantage"
version = "0.1.0"
description = "Alpha Vantage API client"
authors = ["Terry Zhao <terryzhao1981@gmail.com>"]
keywords = ["finance", "stocks", "alpha", "vantage"]
edition = "2018"

[dependencies]
serde = "1.0.93"
serde_json = "1.0.39"
reqwest = "0.9.18"
failure = "0.1.5"
failure_derive = "0.1.5"
chrono = "0.4.7"
chrono-tz = "0.5.1"

[dev-dependencies]
structopt = "0.2.16"
exitfailure = "0.5.1"