[package]
name = "gotts_oracle_api"
version = "0.1.0"
authors = ["Terry Zhao <terryzhao1981@gmail.com>"]
description = "APIs for gotts oracle"
license = "Apache License v2.0"
keywords = [ "gotts", "oracle" ]
edition = "2018"

[dependencies]
easy-jsonrpc-mw = "0.5.4"
failure = "0.1.1"
failure_derive = "0.1.1"
hyper = "0.12"
lazy_static = "1"
regex = "1"
ring = "0.13"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
tokio = "0.1.7"
tokio-core = "0.1.17"
tokio-tcp = "0.1"
tokio-rustls = "0.7"
http = "0.1.5"
hyper-rustls = "0.14"
hyper-timeout = "0.2"
futures = "0.1.21"
rustls = "0.13"
url = "1.7.0"
crossbeam = "0.7.1"
chrono = "0.4.7"
chrono-tz = "0.5.1"

gotts_oracle_alphavantage = { path = "../alphavantage", version = "0.1.0" }
gotts_oracle_util         = { path = "../util", version = "0.1.0" }
gotts_oracle_lib          = { path = "../liboracle", version = "0.1.0" }

