[package]
name = "gotts_oracle_lib"
version = "0.1.0"
description = "Gotts Oracles with some data vendors API clients such as Alpha Vantage"
license = "Apache License v2.0"
repository = "https://github.com/gottstech/gotts-oracle"
authors = ["Gotts Developers <gotts.tech@lists.launchpad.net>"]
keywords = ["gotts", "oracle", "finance", "stocks", "alphavantage"]
edition = "2018"

[dependencies]
log = "0.4"
blake2-rfc = "0.2"
byteorder = "1"
chrono = "0.4.7"
chrono-tz = "0.5.1"
failure = "0.1"
failure_derive = "0.1"
lmdb-zero = "0.4.4"
rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.7", features = ["serde", "v4"] }
gotts_oracle_alphavantage = { path = "../alphavantage", version = "0.1.0" }
gotts_oracle_config       = { path = "../config", version = "0.1.0" }
gotts_oracle_util         = { path = "../util", version = "0.1.0" }

