[package]
name = "gotts_oracle_util"
version = "0.1.0"
authors = ["Gotts Developers <gotts.tech@lists.launchpad.net>"]
description = "Gotts Oracles with some data vendors API clients such as Alpha Vantage"
license = "Apache-2.0"
repository = "https://github.com/gottstech/gotts-oracle"
keywords = ["gotts", "oracle", "finance", "stocks", "alphavantage"]
workspace = ".."
edition = "2018"

[dependencies]
backtrace = "0.3"
lazy_static = "1"
log4rs = { version = "0.8.1", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
log = "0.4"
serde = "1"
serde_derive = "1"
parking_lot = {version = "0.6"}


